Fixed author card text wrapping to next line

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -683,6 +683,7 @@ table.plain {
 	.author-meta {
 		float: left;
 		margin-left: 5%;
+		width: 70%;
 	}
 	
 	.author-name {
